# SMSMaster

./: .coveragerc  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
src/: main.py
src/api/: __init__.py  service_manager.py  sms_service.py  textbelt_service.py  twilio_service.py
src/automation/: scheduler.py
src/cli/: __init__.py  cli.py  test_cli.py
src/gui/: app.py  contact_tab.py  history_tab.py  message_tab.py  schedule_tab.py  settings_tab.py  systemtray.py  templates_tab.py
src/models/: __init__.py  contact_manager.py  database.py
src/security/: credentials.py  validation.py
src/services/: __init__.py  config_service.py  notification_service.py
src/utils/: __init__.py  formatters.py  icon_generator.py  logger.py  test_helpers.py
tests/: __init__.py  run_tests.py  test_api.py  test_api_services.py  test_app.py  test_cli_comprehensive.py  test_database.py  test_formatters.py  test_icon_generator.py  test_logger.py  test_main.py  test_models.py  test_notification.py  test_scheduler.py  test_service_manager.py  test_services.py  test_twilio_service.py  test_validation.py
